--- a/VR Museum Portfolio/ProjectSettings/SceneTemplateSettings.json
+++ b/VR Museum Portfolio/ProjectSettings/SceneTemplateSettings.json
@@ -1,5 +1,14 @@
 {
-    "templatePinStates": [],
+    "templatePinStates": [
+        {
+            "templateId": "Basic (URP)",
+            "isEnabled": true
+        },
+        {
+            "templateId": "Standard (URP)",
+            "isEnabled": true
+        }
+    ],
     "dependencyTypeInfos": [
         {
             "userAdded": false,
